# easyclone

./: CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: release.yml
examples/: config.toml
examples/systemd/: README.md  easyclone.service  easyclone.timer
src/: config.py  enums.py  main.py  models.py  rclone.py  utils.py
src/easyclone/: config.py  main.py
src/easyclone/config/: __init__.py  loader.py  models.py
src/easyclone/core/: engine.py  state.py  types.py
src/easyclone/ipc/: client.py  server.py
src/easyclone/rclone/: __init__.py  backup.py  client.py  create_dirs.py  operations.py  tree.py
src/easyclone/shared/: sync_status.py
src/easyclone/utils/: __init__.py  essentials.py  logging.py  path.py  system.py
src/easyclone/utypes/: config.py  enums.py
src/ipc/: __init__.py  client.py  server.py
src/rclone/: __init__.py  backup.py  create_dirs.py  create_folders.py  dirs.py  folders.py  operations.py
src/shared/: sync_status.py
src/types/: models.py
src/utils/: essentials.py  path_manipulation.py
src/utypes/: config.py
