[project]
name = "easyclone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.13.0",
    "pydantic>=2.11.5",
    "toml>=0.10.2",
    "typer>=0.16.0",
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
